# aiosend

./: .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: code_quality.yml  deploy.yml
aiosend/: __init__.py  __meta__.py  exceptions.py  loggers.py
aiosend/_events/: __init__.py  handler.py  observer.py  payload_data.py  router.py
aiosend/_handler/: __init__.py
aiosend/_methods/: base.py  create_check.py  create_invoice.py  delete_check.py  delete_invoice.py  get_balance.py  get_checks.py  get_currencies.py  get_exchange_rates.py  get_invoices.py  get_me.py  get_stats.py  get_transfers.py  transfer.py
aiosend/_typing/: __init__.pyi  client_webhook_manager.pyi
aiosend/_typing/protocols/: client.pyi  (+7 more)
aiosend/_utils/: __init__.py  check_token.py  sync.py
aiosend/client/: __init__.py  api_server.py  client.py  client.pyi  network.py
aiosend/enums/: __init__.py  asset.py  invoice_status.py
aiosend/handler/: __init__.py  handler.py
aiosend/methods/: base.py  create_check.py  create_invoice.py  delete_invoice.py  get_balance.py  get_checks.py  get_currencies.py  get_exchange_rates.py  get_invoices.py  get_stats.py  get_transfers.py
aiosend/polling/: __init__.py  base.py  check.py  invoice.py  manager.py  router.py
aiosend/tools/: __init__.py  delete_all_checks.py  delete_all_invoices.py  exchange.py  get_balance_by_asset.py  get_check.py  get_invoice.py  get_rates_image.py
aiosend/types/: __init__.py  balance.py  balance.pyi  base.py  base.pyi  check.py  check.pyi  currency.py  exchange_rate.py  exchange_rate.pyi  invoice.py  invoice.pyi  transfer.py  update.py
aiosend/utils/: sync.py
aiosend/webhook/: __init__.py  aiohttp_manager.py  base.py  django_manager.py  fastapi_manager.py  flask_manager.py  router.py
docs/: conf.py  enums.rst  index.rst  install.rst  snow.rst  types.rst
docs/_static/: extra.css  flakes.js  snow.css  snow.js
docs/api/: api_server.rst  errors.rst  index.rst  methods.rst  network.rst  session.rst  types.rst
docs/client/: check_polling.rst  di.rst  hints_warns.rst  index.rst  methods.rst  polling.rst  polling_config.rst  session.rst  shortcuts.rst  tools.rst  webhook.rst
docs/events/: check_polling.rst  filters.rst  index.rst  invoice_polling.rst  payload_data.rst  polling_config.rst  routers.rst  webhook.rst
examples/: aiogram2.py  aiogram3.py  api_server.py  check_object.py  check_polling.py  di.py  exchange.py  get_balance_by_asset.py  get_invoice.py  invoice_object.py  invoice_polling.py  polling.py  polling_config.py  ptb.py  pyro.py  pytba.py  pytba_async.py  quick_start.py  router.py  sync.py  telethon_example.py  webhook_aiohttp.py  webhook_django.py  webhook_fastapi.py  webhook_flask.py
examples/webhook_django/: .gitignore  run.py
(+94 files in other folders)
